[package]
name = "bit-casino-reward-ms"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
redis = { version = "0.32.4", features = ["tls-rustls", "tokio-rustls-comp"] }
reqwest = { version = "0.12.22", features = ["rustls-tls", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.0", features = ["full"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
